Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType40.out
TargetType40.java:16:21: compiler.err.void.not.allowed.here
1 error
